finish all user edits

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="ar">
+<html lang="ar"  dir="rtl">
 <head>
-  <meta charset="utf-8" dir="rtl">
-  <title>ArkanFrontend</title>
+  <meta charset="utf-8">
+  <title>مركز اركان للعيون – Medical Eye Center in Egypt</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="logo.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
